--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "prop-types": "^15.7.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-force-graph": "github:vasturiano/react-force-graph",
+    "react-force-graph-2d": "^1.13.8",
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
