--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "gatsby-source-filesystem": "^2.5.0",
     "gatsby-transformer-json": "^2.5.0",
     "gatsby-transformer-sharp": "^2.6.0",
-    "node-sass": "^4.13.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "sass": "^1.29.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
