--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0",
-    "sass": "^1.29.0"
+    "react-helmet": "^6.1.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^11.0.0",
@@ -43,7 +42,8 @@
     "eslint-plugin-react": "^7.20.5",
     "husky": "^4.2.5",
     "lint-staged": "^10.5.1",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "sass": "^1.29.0"
   },
   "keywords": [
     "gatsby"
